---
source: crates/validation/tests/scenario_tests.rs
expression: errors
---
[
    Error {
        scope: test://example/int-string-len.schema,
        error: '/int' has reduction strategy, but its parent does not,
    },
    Error {
        scope: test://example/int-string-len.schema,
        error: /int has 'set' reduction strategy, restricted to objects, but has types "integer",
    },
    Error {
        scope: test://example/int-string-len.schema,
        error: '/str' has reduction strategy, but its parent does not,
    },
    Error {
        scope: test://example/int-string-len.schema,
        error: /str has 'sum' reduction strategy, restricted to numbers, but has types "string",
    },
]
